--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "tsnd --inspect --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "local": "node src/server.ts"
   },
   "keywords": [],
   "author": "",
